[package]
name = "main"
version = "0.1.0"
authors = ["pmontalb <f.paolo.montalbano@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
md-5 = "0.8.0"